--- a/views/app/views/home.html
+++ b/views/app/views/home.html
@@ -3,8 +3,7 @@
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
-        <h1>Mobile Angular UI
-        Demo <small>1.2</small>
+        <h1>没事来刷题<small>1.0</small>
         </h1>
       </div>
       <div class="list-group-item list-group-item-home">
@@ -12,8 +11,8 @@
           <i class="fa fa-gamepad feature-icon text-primary"></i>
         </div>
         <div>
-            <h3 class="home-heading">Play around a little</h3>
-            Open the sidebar and start testing features
+            <h3 class="home-heading">学霸来刷题</h3>
+            是学霸就来刷题
         </div>
       </div>
 
@@ -23,8 +22,8 @@
           <i class="fa fa-tachometer feature-icon  text-primary"></i>
         </div>
         <div>
-            <h3 class="home-heading">Test responsiveness and speed</h3>
-            Scroll, tap, navigate, test that everything is smooth
+            <h3 class="home-heading">出题给小伙伴</h3>
+            出几个难题分享给小伙伴
         </div>
       </div>
 
@@ -34,10 +33,10 @@
           <i class="fa fa-expand feature-icon  text-primary"></i>
         </div>
         <div>
-            <h3 class="home-heading">Resize your browser</h3>
-            Stretch and squeeze your browser window to see both mobile and desktop versions.
+            <h3 class="home-heading">获取更多快乐</h3>
+            在无聊的时候刷刷题，出难题给小伙伴，快乐度过无聊时间
         </div>
-      </div>
+      </div> 
 
       <div class="list-group-item list-group-item-home">
         <div>
