--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -8,21 +8,23 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/dist/app/views/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
-    <link rel="stylesheet" href="/dist/app/views/demo.css" />
+    <link rel="stylesheet" href="/dist/css/style.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
-    <script src="/dist/app/views/demo.js"></script>
+    <script src="/dist/app/controllers/tempData.js"></script>
+    <script src="/dist/app/controllers/homeController.js"></script>
+    <script src="/dist/app/services/homeServices.js"></script>
   </head>
 
   <body 
-    ng-app="MobileAngularUiExamples" 
+    ng-app="FunQuiz" 
     ng-controller="MainController"
     ui-prevent-touchmove-defaults
     >
@@ -47,12 +49,12 @@
         </div>
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-            <i class="fa fa-bars"></i> Menu
+            <i class="fa fa-bars"></i> 菜单
           </div>
         </div>
         <div class="btn-group pull-right" ui-yield-to="navbarAction">
           <div ui-toggle="uiSidebarRight" class="btn">
-            <i class="fa fa-comment"></i> Chat
+            <i class="fa fa-comment"></i> Hi
           </div>
         </div>
       </div>
