--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -1,88 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <base href="/dist/app/views/" />
-    <title>Mobile Angular UI Demo</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
-    <link rel="shortcut icon" href="/dist/app/views/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
-    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
-    <link rel="stylesheet" href="/dist/css/style.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
-    <script src="/dist/js/mobile-angular-ui.min.js"></script>
-    <!-- Required to use $touch, $swipe, $drag and $translate services -->
-    <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
-    <script src="/dist/app/controllers/tempData.js"></script>
-    <script src="/dist/app/controllers/homeController.js"></script>
-    <script src="/dist/app/services/homeServices.js"></script>
-  </head>
 
-  <body 
-    ng-app="FunQuiz" 
-    ng-controller="MainController"
-    ui-prevent-touchmove-defaults
-    >
+<head>
+  <meta charset="utf-8" />
+  <base href="/dist/app/views/" />
+  <title>Mobile Angular UI Demo</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
+  <link rel="shortcut icon" href="/dist/app/views/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
+  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
+  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
+  <link rel="stylesheet" href="/dist/css/style.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
+  <script src="/dist/js/mobile-angular-ui.min.js"></script>
+  <!-- Required to use $touch, $swipe, $drag and $translate services -->
+  <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
+  <script src="/dist/app/controllers/tempData.js"></script>
+  <script src="/dist/app/controllers/homeController.js"></script>
+  <script src="/dist/app/controllers/userController.js"></script>
+  <script src="/dist/app/services/homeServices.js"></script>
+  <script src="/dist/app/services/userServices.js"></script>
+</head>
 
-    <!-- Sidebars -->
-    <div ng-include="'sidebar.html'" 
-            ui-track-as-search-param='true'
-            class="sidebar sidebar-left"></div>
+<body ng-app="FunQuiz" ng-controller="MainController" ui-prevent-touchmove-defaults>
 
-    <div ng-include="'sidebarRight.html'" 
-            class="sidebar sidebar-right"></div>
+  <!-- Sidebars -->
+  <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left"></div>
 
-    <div class="app" 
-         ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
-         ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
+  <div ng-include="'sidebarRight.html'" class="sidebar sidebar-right"></div>
 
-      <!-- Navbars -->
+  <div class="app" ui-swipe-right='Ui.turnOn("uiSidebarLeft")' ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
 
-      <div class="navbar navbar-app navbar-absolute-top">
-        <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          Mobile Angular UI
-        </div>
-        <div class="btn-group pull-left">
-          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-            <i class="fa fa-bars"></i> 菜单
-          </div>
-        </div>
-        <div class="btn-group pull-right" ui-yield-to="navbarAction">
-          <div ui-toggle="uiSidebarRight" class="btn">
-            <i class="fa fa-comment"></i> Hi
-          </div>
+    <!-- Navbars -->
+
+    <div class="navbar navbar-app navbar-absolute-top">
+      <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
+        Mobile Angular UI
+      </div>
+      <div class="btn-group pull-left">
+        <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
+          <i class="fa fa-bars"></i> 菜单
         </div>
       </div>
+    </div>
 
-      <div class="navbar navbar-app navbar-absolute-bottom">
-        <div class="btn-group justified">
-          <a href="/#" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Docs</a>
-          <a href="/#" class="btn btn-navbar"><i class="fa fa-github fa-navbar"></i> Sources</a>
-          <a href="/#" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> Issues</a>
-        </div>
+    <div class="navbar navbar-app navbar-absolute-bottom">
+      <div class="btn-group justified">
+        <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> 首页</a>
+        <a href="#/login" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 登录</a>
       </div>
+    </div>
 
-      <!-- App Body -->
-      <div class="app-body" ng-class="{loading: loading}">
-        <div ng-show="loading" class="app-content-loading">
-          <i class="fa fa-spinner fa-spin loading-spinner"></i>
-        </div>
-        <div class="app-content">
-          <ng-view></ng-view>
-        </div>
+    <!-- App Body -->
+    <div class="app-body" ng-class="{loading: loading}">
+      <div ng-show="loading" class="app-content-loading">
+        <i class="fa fa-spinner fa-spin loading-spinner"></i>
       </div>
+      <div class="app-content">
+        <ng-view></ng-view>
+      </div>
+    </div>
 
-    </div><!-- ~ .app -->
+  </div>
+  <!-- ~ .app -->
 
-    <div ui-yield-to="modals"></div>
+  <div ui-yield-to="modals"></div>
 
-    <script>
-      //statistics code from google or baidu
-     </script>
-  </body>
+  <script>
+    //statistics code from google or baidu
+  </script>
+</body>
+
 </html>
