--- a/views/app/views/login.html
+++ b/views/app/views/login.html
@@ -31,16 +31,38 @@
             </div>
           </fieldset>
           <hr>
-          <button class="btn btn-primary btn-block"  ng-click="userCtrl.login()">
+          <button class="btn btn-primary btn-block" ng-click="userCtrl.login()">
             登录
           </button>
         </form>
-      
+
       </div>
 
       <div ui-if="activeTab == 2">
         <h3 class="page-header">注册</h3>
-      
+        <form role="form" ng-submit='login()'>
+          <fieldset>
+
+            <div class="form-group has-success has-feedback">
+              <label>邮箱</label>
+              <input type="email" ng-model="userCtrl.email" class="form-control" placeholder="Enter email">
+            </div>
+
+            <div class="form-group">
+              <label>密码</label>
+              <input ng-model="userCtrl.password" type="password" class="form-control" placeholder="Password">
+            </div>
+
+            <div class="form-group">
+              <label>确认密码</label>
+              <input ng-model="userCtrl.confirmPassword" type="password" class="form-control" placeholder="Password">
+            </div>
+          </fieldset>
+          <hr>
+
+          <button class="btn btn-primary btn-block" ng-click="userCtrl.register()">
+            注册
+          </button>
       </div>
 
     </div>
