--- a/views/app/views/home.html
+++ b/views/app/views/home.html
@@ -11,8 +11,8 @@
           <i class="fa fa-gamepad feature-icon text-primary"></i>
         </div>
         <div>
-            <h3 class="home-heading">学霸来刷题</h3>
-            是学霸就来刷题
+            <h3 class="home-heading">休闲来刷题</h3>
+            涨之势的休闲选择
         </div>
       </div>
 
