update for login

--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -22,8 +22,10 @@
   <script src="/dist/app/controllers/tempData.js"></script>
   <script src="/dist/app/controllers/homeController.js"></script>
   <script src="/dist/app/controllers/userController.js"></script>
+  <script src="/dist/app/controllers/alertController.js"></script>
   <script src="/dist/app/services/homeServices.js"></script>
   <script src="/dist/app/services/userServices.js"></script>
+  <script src="/dist/app/services/alertServices.js"></script>
 </head>
 
 <body ng-app="FunQuiz" ng-controller="MainController" ui-prevent-touchmove-defaults>
