--- a/views/app/views/login.html
+++ b/views/app/views/login.html
@@ -22,12 +22,12 @@
           <fieldset>
             <div class="form-group has-success has-feedback">
               <label>邮箱</label>
-              <input type="email" ng-model="userCtrl.email" class="form-control" placeholder="Enter email">
+              <input type="email" ng-model="userCtrl.email" class="form-control" placeholder="Enter email" required="true">
             </div>
 
             <div class="form-group">
               <label>密码</label>
-              <input ng-model="userCtrl.password" type="password" class="form-control" placeholder="Password">
+              <input ng-model="userCtrl.password" type="password" class="form-control" placeholder="Password" required="true">
             </div>
           </fieldset>
           <hr>
@@ -35,7 +35,7 @@
             登录
           </button>
         </form>
-
+        <a href="" ui-turn-on="modal1" class="btn btn-default" ></a>
       </div>
 
       <div ui-if="activeTab == 2">
@@ -45,17 +45,17 @@
 
             <div class="form-group has-success has-feedback">
               <label>邮箱</label>
-              <input type="email" ng-model="userCtrl.email" class="form-control" placeholder="Enter email">
+              <input type="email" ng-model="userCtrl.email" class="form-control" placeholder="Enter email" required="true">
             </div>
 
             <div class="form-group">
               <label>密码</label>
-              <input ng-model="userCtrl.password" type="password" class="form-control" placeholder="Password">
+              <input ng-model="userCtrl.password" type="password" class="form-control" placeholder="Password" required="true">
             </div>
 
             <div class="form-group">
               <label>确认密码</label>
-              <input ng-model="userCtrl.confirmPassword" type="password" class="form-control" placeholder="Password">
+              <input ng-model="userCtrl.confirmPassword" type="password" class="form-control" placeholder="Password" required="true">
             </div>
           </fieldset>
           <hr>
@@ -68,4 +68,9 @@
     </div>
 
   </div>
+</div>
+
+
+<div ui-content-for="modals">
+  <div ng-include="'alert.html'"></div>
 </div>
