--- a/views/app/views/home.html
+++ b/views/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="scrollable">  
+<div class="scrollable">
   <div class="scrollable-content">
 
     <div class="list-group text-center">
@@ -11,8 +11,11 @@
           <i class="fa fa-gamepad feature-icon text-primary"></i>
         </div>
         <div>
-            <h3 class="home-heading">休闲来刷题</h3>
-            涨之势的休闲选择
+          <h3 class="home-heading">休闲来刷题</h3>
+           <button class="btn btn-primary btn-block" ng-click="homeCtrl.beginTest()">
+            开始
+          </button>
+
         </div>
       </div>
 
