--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -17,15 +17,16 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
   <script src="/dist/js/mobile-angular-ui.min.js"></script>
-  <!-- Required to use $touch, $swipe, $drag and $translate services -->
   <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
   <script src="/dist/app/controllers/tempData.js"></script>
   <script src="/dist/app/controllers/homeController.js"></script>
   <script src="/dist/app/controllers/userController.js"></script>
   <script src="/dist/app/controllers/alertController.js"></script>
+  <script src="/dist/app/controllers/quizController.js"></script>
   <script src="/dist/app/services/homeServices.js"></script>
   <script src="/dist/app/services/userServices.js"></script>
   <script src="/dist/app/services/alertServices.js"></script>
+  <script src="/dist/app/services/quizServices.js"></script>
 </head>
 
 <body ng-app="FunQuiz" ng-controller="MainController" ui-prevent-touchmove-defaults>
@@ -54,6 +55,7 @@
       <div class="btn-group justified">
         <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> 首页</a>
         <a href="#/login" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 登录</a>
+        <a href="#/user" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> {{ user.email}}</a>
       </div>
     </div>
 
