--- a/views/app/views/sidebar.html
+++ b/views/app/views/sidebar.html
@@ -5,7 +5,7 @@
       <a class="list-group-item" href="#/">首页 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/list/1">刷题 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/list/2">分类 <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/list/3">关于 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/quiz/add">add quiz <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
   </div>
 </div>
