--- a/views/app/views/addquiz.html
+++ b/views/app/views/addquiz.html
@@ -25,20 +25,24 @@
           <label>正确答案</label>
           <input type="text" ng-model="quizCtrl.rightAnswer" class="form-control" placeholder="输入答案">
         </div>
-
+        <div class="form-group has-success has-feedback">
+          <label>标签</label>
+          <input type="text" ng-model="quizCtrl.tag" class="form-control" placeholder="输入标签">
+        </div>
         <div class="form-group has-success has-feedback">
           <label>分类</label>
-          <select ng-model="quizCtrl.category"  class="form-control">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+          <select ng-model="quizCtrl.category" class="form-control">
+            <option value="文学">文学</option>
+            <option value="体育">体育</option>
+            <option value="科学">科学</option>
+            <option value="地理">地理</option>
+            <option value="教育">教育</option>
           </select>
         </div>
       </fieldset>
       <hr>
 
-      <button class="btn btn-primary btn-block" ng-click='quizCtrl.save()'> 
+      <button class="btn btn-primary btn-block" ng-click='quizCtrl.save()'>
         提交
       </button>
     </form>
