--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -29,7 +29,7 @@
   <script src="/dist/app/services/quizServices.js"></script>
 </head>
 
-<body ng-app="FunQuiz" ng-controller="MainController" ui-prevent-touchmove-defaults>
+<body ng-app="FunQuiz" ng-controller="IndexController"  ui-prevent-touchmove-defaults>
 
   <!-- Sidebars -->
   <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left"></div>
@@ -42,7 +42,7 @@
 
     <div class="navbar navbar-app navbar-absolute-top">
       <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-        Mobile Angular UI
+        Mobile Angular UI {{hello}}
       </div>
       <div class="btn-group pull-left">
         <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
@@ -54,8 +54,8 @@
     <div class="navbar navbar-app navbar-absolute-bottom">
       <div class="btn-group justified">
         <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> 首页</a>
-        <a href="#/login" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 登录</a>
-        <a href="#/user" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> {{ user.email}}</a>
+        <a href="#/dashboard" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i>我的信息</a>
+        <a href="#/about" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 关于</a>
       </div>
     </div>
 
