--- a/views/app/views/alert.html
+++ b/views/app/views/alert.html
@@ -5,14 +5,13 @@
       <div class="modal-header">
         <button class="close" 
                 ui-turn-off="modal1">&times;</button>
-        <h4 class="modal-title">test</h4>
+        <h4 class="modal-title">{{title}}</h4>
       </div>
       <div class="modal-body">
-        <p>test</p>
+        <p>{{message}}</p>
       </div>
       <div class="modal-footer">
         <button ui-turn-off="modal1" class="btn btn-default">Close</button>
-        <button ui-turn-off="modal1" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
