--- a/views/app/views/sidebar.html
+++ b/views/app/views/sidebar.html
@@ -5,6 +5,7 @@
       <a class="list-group-item" href="#/">首页 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/test/1">刷题 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/list/1">分类 <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/list/2">标签 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/quiz/add">加题 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/dashboard">我的信息 <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/about">关于 <i class="fa fa-chevron-right pull-right"></i></a>
