--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <base href="/dist/app/views/" />
-  <title>Mobile Angular UI Demo</title>
+  <title>来刷题</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
@@ -14,18 +14,15 @@
   <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
   <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
   <link rel="stylesheet" href="/dist/css/style.css" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
+  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
+  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-route.min.js"></script>
   <script src="/dist/js/mobile-angular-ui.min.js"></script>
   <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
-  <script src="/dist/app/controllers/tempData.js"></script>
   <script src="/dist/app/controllers/homeController.js"></script>
   <script src="/dist/app/controllers/userController.js"></script>
-  <script src="/dist/app/controllers/alertController.js"></script>
   <script src="/dist/app/controllers/quizController.js"></script>
   <script src="/dist/app/services/homeServices.js"></script>
   <script src="/dist/app/services/userServices.js"></script>
-  <script src="/dist/app/services/alertServices.js"></script>
   <script src="/dist/app/services/quizServices.js"></script>
 </head>
 
@@ -42,7 +39,7 @@
 
     <div class="navbar navbar-app navbar-absolute-top">
       <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-        Mobile Angular UI {{hello}}
+        休闲-来刷题
       </div>
       <div class="btn-group pull-left">
         <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
