--- a/src/less/style.css
+++ b/src/less/style.css
@@ -154,3 +154,7 @@ input.scrollable-header {
 }
 
 .toucharea {width: 100%; height: 100%;}
+
+.transform {
+  transform: translate(12px) rotate(20deg);
+}
