--- a/src/less/style.css
+++ b/src/less/style.css
@@ -156,5 +156,8 @@ input.scrollable-header {
 .toucharea {width: 100%; height: 100%;}
 
 .transform {
-  transform: translate(12px) rotate(20deg);
+  -webkit-transform: scale(1.5) rotate(360deg); 
+  -moz-transform: scale(1.5)  rotate(360deg);
+  transform: scale(1.5) rotate(360deg);
+  background-color: slategray;
 }
