--- a/src/less/style.css
+++ b/src/less/style.css
@@ -156,8 +156,45 @@ input.scrollable-header {
 .toucharea {width: 100%; height: 100%;}
 
 .transform {
-  -webkit-transform: scale(1.5) rotate(360deg); 
-  -moz-transform: scale(1.5)  rotate(360deg);
-  transform: scale(1.5) rotate(360deg);
+  -webkit-transform: rotate(360deg); 
+  -moz-transform:  rotate(360deg);
+  transform: rotate(360deg);
   background-color: slategray;
+}
+
+.example-repeat-enter-setup,
+.example-repeat-leave-setup,
+.example-repeat-move-setup {
+  -webkit-transition:all linear 0.5s;
+  -moz-transition:all linear 0.5s;
+  -ms-transition:all linear 0.5s;
+  -o-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+}
+
+.example-repeat-enter-setup {
+  line-height:0;
+  opacity:0;
+}
+.example-repeat-enter-setup.example-repeat-enter-start {
+  line-height:20px;
+  opacity:1;
+}
+
+.example-repeat-leave-setup {
+  opacity:1;
+  line-height:20px;
+}
+.example-repeat-leave-setup.example-repeat-leave-start {
+  opacity:0;
+  line-height:0;
+}
+
+.example-repeat-move-setup {
+  opacity:1;
+  color:red
+}
+.example-repeat-move-setup.example-repeat-move-start {
+  opacity:1;
+  color:black;
 }
