--- a/views/app/views/test.html
+++ b/views/app/views/test.html
@@ -6,7 +6,7 @@
     <div class="scrollable-content section">
 
         <fieldset>
-            <div class="transform" id="transform">
+            <div class="repeat-animation" id="transform" >
                 <legend ng-bind="testCtrl.testItem.quiz"></legend>
                 <div class="form-group has-success has-feedback">
                     <button ng-repeat="item in testCtrl.testItem.answer" ng-click="testCtrl.chooseAnwser(item,testCtrl.testItem,$scope)" class="form-control"
