update user infor

--- a/views/app/views/addquiz.html
+++ b/views/app/views/addquiz.html
@@ -37,6 +37,8 @@
             <option value="科学">科学</option>
             <option value="地理">地理</option>
             <option value="教育">教育</option>
+            <option value="英语">英语</option>
+            <option value="英语">历史</option>
           </select>
         </div>
       </fieldset>
