--- a/views/app/views/result.html
+++ b/views/app/views/result.html
@@ -8,7 +8,7 @@
       <legend>成绩</legend>
         <div class="form-group has-success has-feedback">
           <p><label>您共答对 {{resultCtrl.result}} 题</label></p>
-          <p><label>最大连接 {{resultCtrl.result}} 次</label></p>
+          <p><label>最大连击 {{resultCtrl.result}} 次</label></p>
         </div>
     </fieldset>
     <hr>
