--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/dist/css/style.css" />
   <script src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
   <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-route.min.js"></script>
+  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-animate.min.js"></script>
   <script src="/dist/js/mobile-angular-ui.min.js"></script>
   <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
   <script src="/dist/app/controllers/homeController.js"></script>
