--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -63,7 +63,7 @@
         <i class="fa fa-spinner fa-spin loading-spinner"></i>
       </div>
       <div class="app-content">
-        <ng-view></ng-view>
+        <ng-view class="view-slide-in"></ng-view>
       </div>
     </div>
 
