--- a/views/app/views/category.html
+++ b/views/app/views/category.html
@@ -5,8 +5,8 @@
 <div class="scrollable" ui-state="searchBar">
   <div class="scrollable-content">
     <div class="list-group">
-      <a ng-repeat="item in listCtrl.scrollItems" href="#/test/{{ item.id }}" class="list-group-item">
-        {{ item.type }} <i class="fa fa-chevron-right pull-right"></i>
+      <a ng-repeat="item in listCtrl.scrollItems" href="#/test/{{ item }}" class="list-group-item">
+        {{ item }} <i class="fa fa-chevron-right pull-right"></i>
       </a>
     </div>
   </div>
