--- a/views/app/views/index.html
+++ b/views/app/views/index.html
@@ -2,79 +2,82 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <base href="/dist/app/views/" />
-  <title>来刷题</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
-  <link rel="shortcut icon" href="/dist/app/views/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
-  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
-  <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
-  <link rel="stylesheet" href="/dist/css/style.css" />
-  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
-  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-route.min.js"></script>
-  <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-animate.min.js"></script>
-  <script src="/dist/js/mobile-angular-ui.min.js"></script>
-  <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
-  <script src="/dist/app/controllers/homeController.js"></script>
-  <script src="/dist/app/controllers/userController.js"></script>
-  <script src="/dist/app/controllers/quizController.js"></script>
-  <script src="/dist/app/services/homeServices.js"></script>
-  <script src="/dist/app/services/userServices.js"></script>
-  <script src="/dist/app/services/quizServices.js"></script>
+    <meta charset="utf-8" />
+    <base href="/dist/app/views/" />
+    <title>休闲-来刷题</title>
+
+    <meta name="description" content="快乐问答，学霸刷题，休闲答题 尽在 来刷题" />
+    <meta name="keywords" content=" 来刷题" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
+    <link rel="shortcut icon" href="/dist/app/views/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
+    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
+    <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
+    <link rel="stylesheet" href="/dist/css/style.css" />
+    <script src="//cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
+    <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-route.min.js"></script>
+    <script src="//cdn.bootcss.com/angular.js/1.3.0/angular-animate.min.js"></script>
+    <script src="/dist/js/mobile-angular-ui.min.js"></script>
+    <script src="/dist/js/mobile-angular-ui.gestures.min.js"></script>
+    <script src="/dist/app/controllers/homeController.js"></script>
+    <script src="/dist/app/controllers/userController.js"></script>
+    <script src="/dist/app/controllers/quizController.js"></script>
+    <script src="/dist/app/services/homeServices.js"></script>
+    <script src="/dist/app/services/userServices.js"></script>
+    <script src="/dist/app/services/quizServices.js"></script>
 </head>
 
-<body ng-app="FunQuiz" ng-controller="IndexController"  ui-prevent-touchmove-defaults>
+<body ng-app="FunQuiz" ng-controller="IndexController" ui-prevent-touchmove-defaults>
 
-  <!-- Sidebars -->
-  <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left"></div>
+    <!-- Sidebars -->
+    <div ng-include="'sidebar.html'" ui-track-as-search-param='true' class="sidebar sidebar-left"></div>
 
-  <div ng-include="'sidebarRight.html'" class="sidebar sidebar-right"></div>
+    <div ng-include="'sidebarRight.html'" class="sidebar sidebar-right"></div>
 
-  <div class="app" ui-swipe-right='Ui.turnOn("uiSidebarLeft")' ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
+    <div class="app" ui-swipe-right='Ui.turnOn("uiSidebarLeft")' ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
 
-    <!-- Navbars -->
+        <!-- Navbars -->
 
-    <div class="navbar navbar-app navbar-absolute-top">
-      <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-        休闲-来刷题
-      </div>
-      <div class="btn-group pull-left">
-        <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-          <i class="fa fa-bars"></i> 菜单
+        <div class="navbar navbar-app navbar-absolute-top">
+            <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
+                休闲-来刷题
+            </div>
+            <div class="btn-group pull-left">
+                <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
+                    <i class="fa fa-bars"></i> 菜单
+                </div>
+            </div>
         </div>
-      </div>
+
+        <div class="navbar navbar-app navbar-absolute-bottom">
+            <div class="btn-group justified">
+                <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> 首页</a>
+                <a href="#/dashboard" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i>我的信息</a>
+                <a href="#/about" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 关于</a>
+            </div>
+        </div>
+
+        <!-- App Body -->
+        <div class="app-body" ng-class="{loading: loading}">
+            <div ng-show="loading" class="app-content-loading">
+                <i class="fa fa-spinner fa-spin loading-spinner"></i>
+            </div>
+            <div class="app-content">
+                <ng-view class="view-slide-in"></ng-view>
+            </div>
+        </div>
+
     </div>
+    <!-- ~ .app -->
 
-    <div class="navbar navbar-app navbar-absolute-bottom">
-      <div class="btn-group justified">
-        <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> 首页</a>
-        <a href="#/dashboard" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i>我的信息</a>
-        <a href="#/about" class="btn btn-navbar"><i class="fa fa-exclamation-circle fa-navbar"></i> 关于</a>
-      </div>
-    </div>
+    <div ui-yield-to="modals"></div>
 
-    <!-- App Body -->
-    <div class="app-body" ng-class="{loading: loading}">
-      <div ng-show="loading" class="app-content-loading">
-        <i class="fa fa-spinner fa-spin loading-spinner"></i>
-      </div>
-      <div class="app-content">
-        <ng-view class="view-slide-in"></ng-view>
-      </div>
-    </div>
-
-  </div>
-  <!-- ~ .app -->
-
-  <div ui-yield-to="modals"></div>
-
-  <script>
-    //statistics code from google or baidu
-  </script>
+    <script>
+        //statistics code from google or baidu
+    </script>
 </body>
 
 </html>
