update test page

--- a/views/app/views/home.html
+++ b/views/app/views/home.html
@@ -3,7 +3,7 @@
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
-        <h1>没事来刷题<small>1.0</small>
+        <h1>休闲来刷题
         </h1>
       </div>
       <div class="list-group-item list-group-item-home">
