--- a/views/app/views/test.html
+++ b/views/app/views/test.html
@@ -8,7 +8,7 @@
         <fieldset>
             <div class="" id="transform">
                 <legend ng-bind="testCtrl.testItem.quiz"></legend>
-                <label>您本轮连击次数：{{testCtrl.combo}}</label>
+                <label>连击次数：{{testCtrl.combo}}</label>
                 <div class="form-group has-success has-feedback repeat-animation hide-fade" ng-repeat="item in testCtrl.testItem.answer">
                     <button ng-click="testCtrl.chooseAnwser(item,testCtrl.testItem,$scope)" class="form-control">
                         {{ item }}
